objects/RegulatoryLog__c.object
<CustomObject>
    <label>Regulatory Log</label>
    <pluralLabel>Regulatory Logs</pluralLabel>
    <nameField>
        <label>Regulatory Log Name</label>
        <type>Text</type>
        <fullName>RegulatoryLogName__c</fullName>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>InteractionDate__c</fullName>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InteractionType__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
</CustomObject>